<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginTop="10dp"
    android:alpha="0.8"
    android:id="@+id/rootpopup"
    android:background="@drawable/search_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/langauge"
        android:textColor="#fff"
        android:textSize="15dp"
        android:textStyle="bold"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/radio_english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13dp"
                    android:checked="true"
                    android:textColor="#fff"
                    android:text="@string/english"></RadioButton>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/radio_french"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:textSize="13dp"
                    android:textColor="#fff"
                    android:text="@string/french"></RadioButton>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/radio_spanish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13dp"
                    android:checked="true"
                    android:textColor="#fff"
                    android:text="@string/spanish"></RadioButton>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/radio_british"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13dp"
                    android:textColor="#fff"
                    android:text="@string/british"></RadioButton>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="2dp"
        android:textSize="15dp"
        android:background="@color/white"
        android:text="@string/done"></Button>

</LinearLayout>