<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:minHeight="?attr/actionBarSize">

        <ImageView
            android:id="@+id/back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@mipmap/ic_action_back_icon3x" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/toolbar_title"
            android:textColor="@color/white"
            android:textSize="19dp" />


    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg">
        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:alpha="0.8"
            android:background="@drawable/inner_view"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/signintop"
                android:gravity="center"
                android:text="@string/signintonovu"
                android:textColor="@color/white"
                android:textSize="@dimen/signintonuvo" />

            <TextView
                android:id="@+id/tv_useemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/useemail"
                android:textColor="@color/white"
                android:textSize="@dimen/useemail" />

            <TextView
                android:id="@+id/tv_whencreated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:text="@string/whenyou"
                android:textColor="@color/white"
                android:textSize="@dimen/whenyouconnected" />

            <EditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/signintop"
                android:background="@drawable/textbox"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/ed_email" />


            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="10dp"
                android:background="@drawable/textbox"
                android:drawableRight="@drawable/password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="50"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/ed_password" />


            <Button
                android:id="@+id/signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/signuptop"
                android:background="@drawable/btn_color_dark"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="@dimen/loginbttextsize" />

            <TextView
                android:id="@+id/txtLostpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:autoLink="web"
                android:text="@string/forgotpassword"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white"
                android:textColorLink="@color/white"
                android:textSize="@dimen/forgotpassword" />
        </LinearLayout>
</ScrollView>
    </LinearLayout>


</LinearLayout>