<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"

    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/black"
        >
        <ImageView
            android:layout_width="20dp"
            android:id="@+id/back"
            android:background="@mipmap/ic_action_back_icon3x"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toolbar_title"
            android:textSize="19dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title" />


    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/login_bg"
        android:layout_height="match_parent">
        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:alpha="0.8"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@drawable/inner_view"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/tvforgotpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/signintonuvo"
                android:layout_marginTop="@dimen/signintop"
                android:textColor="@color/white"
                android:id="@+id/tv_forgotpassword" />

            <TextView
                android:text="@string/enteryouremail"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textSize="@dimen/useemail"
                android:layout_height="wrap_content"
                android:id="@+id/tv_enteremail" />

            <TextView
                android:text="@string/passwordreset"
                android:layout_width="match_parent"
                android:textColor="@color/white"

                android:gravity="center"
                android:textSize="@dimen/whenyouconnected"
                android:layout_height="wrap_content"
                android:id="@+id/tv_passwordreset" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/signintop"
                android:inputType="textPersonName"
                android:hint="@string/email"
                android:padding="10dp"
                android:maxLength="50"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="@dimen/ed_email"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:background="@drawable/textbox"
                android:ems="10"
                android:id="@+id/ed_email" />



            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_color_dark"
                android:id="@+id/send"
                android:text="@string/send"
                android:textColor="#fff"
                android:textSize="@dimen/loginbttextsize"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="@dimen/signuptop"
                android:textAllCaps="false"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                />

        </LinearLayout>
</ScrollView>
    </LinearLayout>


</LinearLayout>