<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"

    android:layout_height="wrap_content">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/black"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:background="@mipmap/ic_action_back_icon3x"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toolbar_title"
            android:textSize="@dimen/toolbartextsize"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title" />


    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/login_bg"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:alpha="0.8"
            android:background="@drawable/inner_view"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/signintonuvo"
                android:layout_marginTop="@dimen/signintop"
                android:textColor="@color/white"
                android:id="@+id/tv_register" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/signintop"
                android:inputType="textPersonName"
                android:hint="@string/email"
                android:padding="10dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="@dimen/ed_email"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:background="@drawable/textbox"
                android:ems="10"
                android:id="@+id/ed_email" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:drawableRight="@drawable/password"
                android:textColor="@color/white"
                android:textSize="@dimen/ed_password"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:background="@drawable/textbox"

                android:id="@+id/ed_password" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_color_dark"
                android:id="@+id/signup"
                android:text="@string/sign_up"
                android:textColor="#fff"
                android:textSize="@dimen/loginbttextsize"
                android:layout_marginTop="@dimen/signuptop"
                android:layout_marginBottom="@dimen/signuptop"
                android:textAllCaps="false"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>